# lambda-rust

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile_arm64  LICENSE  Makefile  README.md  build.sh  latest.sh  sccache-wrapper.sh
.github/workflows/: check.yml  main.yml  nightly.yml  release.yml  security.yml  stable.yml  untrusted.yml
tests/: bashtest.sh  test.sh
tests/native-crate-func/: Cargo.toml  output
tests/native-crate-func/src/: main.rs
tests/test-func/: Cargo.toml
tests/test-func-with-hooks/: Cargo.toml  expected-output.json
tests/test-func-with-hooks/.lambda-rust/: build  install  package
tests/test-func-with-hooks/src/: main.rs
tests/test-func/src/: main.rs
tests/test-multi-func/: Cargo.toml
tests/test-multi-func/foo/: Cargo.toml
tests/test-multi-func/foo/src/: main.rs
