[package]
name = "test-func"
version = "0.1.0"
authors = ["softprops <d.tangren@gmail.com>"]
edition = "2021"

# users don't have to do this
# but when they do, the builder packaging still work
[[bin]]
name = "bootstrap"
path = "src/main.rs"

[dependencies]
lambda_runtime = "0.2"
serde_json = "1.0"
